test/typechecker.d/invalid/export3.souc.bad
module export3 where
	two: Integer

two = 3: String
